[package]
name = "htui"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
crossterm = { version = "0.28.1", default-features = false,  features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.27.0"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.38.0", features = ["full"] }
