[package]
name = "htui"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "5.0.1"
futures-util = "0.3.31"
ratatui = "0.29.0"
reqwest = "0.12.9"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = "0.7.12"
